--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
 /* NAV-BAR */
 
 .nav-bar {
+  max-width: 1300px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -29,6 +31,7 @@ body {
   font-size: 48px;
   font-family: "Noto Serif", serif;
   font-weight: 700;
+  color: #0a1e2c;
 }
 
 .add-person {
@@ -45,29 +48,55 @@ body {
 }
 
 .table {
-  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+.table thead {
+  background-color: #3497da;
+}
+
+.table tbody tr:nth-child(odd) {
+  background-color: #d6eaf8;
+}
+
+.table tbody tr:nth-child(even) {
+  background-color: #3497da;
+  color: #f1f8fc;
 }
 
 .table th {
   padding: 12px 24px;
-  border: 1px solid black;
+  border: none;
+  color: #f1f8fc;
 }
 
 .table td {
   padding: 12px 24px;
-  border: 1px solid black;
+  border: none;
 }
 
 /* FORM */
 
 .form-container {
-  padding: 64px;
+  height: 100%;
+  /* width: 1200px; */
+  padding: 64px 400px;
   border: 1px solid black;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.705);
+  /* display: none; */
+}
+
+.close {
+  width: 48px;
+  height: 48px;
+  color: #fff;
+  position: absolute;
+  top: 20px;
+  right: 50px;
 }
 
 .form {
@@ -88,6 +117,8 @@ body {
   font-size: 18px;
   padding: 6px 12px;
   background-color: #fff;
+  border: none;
+  border-bottom: 1px solid black;
 }
 
 input:-webkit-autofill {
@@ -102,4 +133,58 @@ input:-webkit-autofill {
   margin-top: 24px;
   align-self: center;
   padding: 12px 24px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  border: 1px solid black;
+  color: #fff;
+  background-color: #0099cc;
+  background-repeat: no-repeat;
+  background-position: -120px -120px, 0 0;
+
+  background-image: -webkit-linear-gradient(
+    top left,
+    rgba(255, 255, 255, 0.2) 0%,
+    rgba(255, 255, 255, 0.2) 37%,
+    rgba(255, 255, 255, 0.8) 45%,
+    rgba(255, 255, 255, 0) 50%
+  );
+  background-image: -moz-linear-gradient(
+    0 0,
+    rgba(255, 255, 255, 0.2) 0%,
+    rgba(255, 255, 255, 0.2) 37%,
+    rgba(255, 255, 255, 0.8) 45%,
+    rgba(255, 255, 255, 0) 50%
+  );
+  background-image: -o-linear-gradient(
+    0 0,
+    rgba(255, 255, 255, 0.2) 0%,
+    rgba(255, 255, 255, 0.2) 37%,
+    rgba(255, 255, 255, 0.8) 45%,
+    rgba(255, 255, 255, 0) 50%
+  );
+  background-image: linear-gradient(
+    0 0,
+    rgba(255, 255, 255, 0.2) 0%,
+    rgba(255, 255, 255, 0.2) 37%,
+    rgba(255, 255, 255, 0.8) 45%,
+    rgba(255, 255, 255, 0) 50%
+  );
+
+  -moz-background-size: 250% 250%, 100% 100%;
+  background-size: 250% 250%, 100% 100%;
+
+  -webkit-transition: background-position 0s ease;
+  -moz-transition: background-position 0s ease;
+  -o-transition: background-position 0s ease;
+  transition: background-position 0s ease;
+}
+
+.btn:hover {
+  background-position: 0 0, 0 0;
+
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  transition-duration: 0.5s;
 }
