--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ body {
 }
 
 .form input {
-  margin-bottom: 12px;
+  margin-bottom: 6px;
   font-size: 18px;
   padding: 6px 12px;
   background-color: #fff;
@@ -202,6 +202,18 @@ input:-webkit-autofill {
   -webkit-transition-duration: 0.5s;
   -moz-transition-duration: 0.5s;
   transition-duration: 0.5s;
+}
+
+/* ERROR MESSAGES */
+
+.error {
+  font-size: 12px;
+  color: #df4759;
+  margin-bottom: 12px;
+}
+
+.error-input {
+  border: 3px solid #df4759;
 }
 
 /* BUTTONS */
