--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ body {
   height: 48px;
   cursor: pointer;
   color: darkblue;
+  transition: all 0.3s;
+}
+
+.add-person:hover {
+  transform: scale(1.2);
 }
 
 /* MAIN-SECTION */
@@ -54,6 +59,7 @@ body {
 .table {
   border-collapse: collapse;
   margin: 0 12px;
+  word-wrap: break-word;
 }
 
 .table thead {
@@ -267,7 +273,9 @@ input:-webkit-autofill {
   color: #fff;
 }
 
-@media (max-width: 768px) {
+/* RESPONISVE */
+
+@media (max-width: 940px) {
   body {
     padding: 0 40px;
   }
@@ -316,7 +324,8 @@ input:-webkit-autofill {
   .table td {
     border: 1px solid rgb(255, 255, 255);
     text-align: right;
-    padding: 12px;
+    padding-left: 50%;
+    padding-right: 12px;
     position: relative;
   }
 
